# Unity-Wakatime

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  app_icon.rc.in  main.cpp
.github/workflows/: build.yml
aseprite-extension/: package.json  wakatime.lua
include/: app_registry.h  common.h  file_watcher.h  focus_detector.h  globals.h  inbox_bridge.h  process_monitor.h  tray_icon.h  unity_focus_detector.h  wakatime_client.h  windows_dark_mode.h
src/: app_registry.cpp  file_watcher.cpp  focus_detector.cpp  inbox_bridge.cpp  process_monitor.cpp  tray_icon.cpp  unity_focus_detector.cpp  wakatime_client.cpp  windows_dark_mode.cpp
